# afb-libafb

./: .clang-tidy  .gitignore  CHANGELOG  CMakeLists.txt  README.md  analyze.sh  changelog  check-includes.sh  doxyfile  metapkg.txt  mkbuild-zephyr.sh  mkbuild.sh  mktar.sh
include/: CMakeLists.txt
include/afb/: afb-api-x3-itf.h  afb-api-x3.h  afb-arg.h  afb-auth.h  afb-binding  afb-binding-postdefs.h  afb-binding-predefs.h  afb-binding-v1.h  afb-binding-v2.h  afb-binding-v3.h  afb-binding.h  afb-daemon-itf-x1.h  afb-daemon-v1.h  afb-daemon-v2.h  afb-dynapi-legacy.h  afb-event-x1-itf.h  afb-event-x1.h  afb-event-x2-itf.h  afb-event-x2.h  afb-req-v1.h  afb-req-v2.h  afb-req-x1-itf.h  afb-req-x1.h  afb-req-x2-itf.h  afb-req-x2.h  afb-service-itf-x1.h  afb-service-v1.h  afb-service-v2.h  afb-session-x1.h  afb-session-x2.h  afb-verbosity.h
packaging/rpm/: afb-libafb.spec
protocols/: protocol-x-afb-ws-json1.md  spec-wsapi-v1.odt  spec-wsapi-v2.odt  spec-wsapi-v3.odt
reports/: memory-shared-ipc.txt  parameters-v4.txt
src/: CMakeLists.txt  afb-config.h.in  libafb-config.h.in
src/libafb/: CMakeLists.txt  afb-apis.h  afb-core.h  afb-extend.h  afb-extension.h  afb-http.h  afb-legacy.h  afb-misc.h  afb-rpc.h  afb-sys.h  afb-tls.h  afb-utils.h  afb-v4.h  afb-wsapi.h  afb-wsj1.h  libafb  libafb-config.h  libafb-config.h.in  libafb-static.pc.in  libafb.h  libafb.pc.in  update-includes.sh
src/libafb/apis/: afb-api-dbus.c  afb-api-dbus.h  afb-api-rpc.c  afb-api-rpc.h  afb-api-so-v3.c  afb-api-so-v3.h  afb-api-so-v4.c  afb-api-so-v4.h  afb-api-so.c  afb-api-so.h  afb-api-ws.c  afb-api-ws.h
src/libafb/core/: afb-api-common.c  afb-api-common.h  afb-api-common.inc  afb-api-v3.c  afb-api-v3.h  afb-api-v4.c  afb-api-v4.h  afb-apiname.c  afb-apiname.h  afb-apiset.c  afb-apiset.h  afb-auth.c  afb-auth.h  afb-calls.c  afb-calls.h  afb-common.c  afb-common.h  afb-context.c  afb-context.h  afb-cred.c  afb-cred.h  afb-data-array.c  afb-data-array.h  afb-data.c  afb-data.h  afb-error-text.c  afb-error-text.h  afb-ev-mgr.c  afb-ev-mgr.h  afb-evt.c  afb-evt.h  afb-export.c  afb-export.h  afb-global.c  afb-global.h  afb-hook-flags.c  afb-hook-flags.h  afb-hook.c  afb-hook.h  afb-info.c  (+44 more)
src/libafb/extend/: afb-extend.c  afb-extend.h  afb-extension.h  libafb-extend.map
src/libafb/http/: afb-hreq.c  afb-hreq.h  afb-hsrv.c  afb-hsrv.h  afb-hswitch.c  afb-hswitch.h  afb-method.c  afb-method.h  afb-upgd-rpc.c  afb-upgd-rpc.h  afb-upgrade.c  afb-upgrade.h  afb-websock.c  afb-websock.h
src/libafb/legacy/: afb-fdev.c  afb-fdev.h  afb-socket-fdev.c  afb-socket-fdev.h  evmgr.c  evmgr.h  fdev-epoll.c  fdev-epoll.h  fdev-poll.c  fdev-poll.h  fdev-provider.h  fdev-select.c  fdev-select.h  fdev-systemd.c  fdev-systemd.h  fdev.c  fdev.h
src/libafb/misc/: afb-autoset.c  afb-autoset.h  afb-debug.c  afb-debug.h  afb-fdev.c  afb-fdev.h  afb-monitor.c  afb-monitor.h  afb-monitor.md  afb-socket-fdev.c  afb-socket-fdev.h  afb-socket.c  afb-socket.h  afb-supervision.c  afb-supervision.h  afb-supervisor.h  afb-systemd.c  afb-systemd.h  afb-trace.c  afb-trace.h  afb-uri.c  afb-uri.h  afb-vcomm.h  afb-verbose.c  afb-verbose.h  afb-watchdog.c  afb-watchdog.h  afb-ws-connect.c  afb-ws-connect.h  afb-ws.c  afb-ws.h  afs-supervision.h  monitor-api.inc
src/libafb/rpc/: afb-rpc-coder.c  afb-rpc-coder.h  afb-rpc-decoder.c  afb-rpc-decoder.h  afb-rpc-sock.c  afb-rpc-sock.h  afb-rpc-spec.c  afb-rpc-spec.h  afb-rpc-v0.c  afb-rpc-v0.h  afb-rpc-v1.c  afb-rpc-v1.h  afb-rpc-v2.c  afb-rpc-v2.h  afb-rpc-v3.c  afb-rpc-v3.h  afb-stub-rpc.c  afb-stub-rpc.h  afb-wrap-rpc.c  afb-wrap-rpc.h
src/libafb/sys/: ev-mgr.c  ev-mgr.h  evmgr.c  evmgr.h  fdev-epoll.c  fdev-epoll.h  fdev-poll.c  fdev-poll.h  fdev-provider.h  fdev-select.c  fdev-select.h  fdev-systemd.c  fdev-systemd.h  fdev.c  fdev.h  process-name.c  process-name.h  subpath.c  subpath.h  systemd.c  systemd.h  verbose.c  verbose.h  watchdog.c  watchdog.h  x-alloca.h  x-buf.h  x-cond.h  x-dynlib.c  x-dynlib.h  x-endian.h  x-epoll.h  x-errno.h  x-mutex.h  x-poll.h  x-realpath.h  x-rwlock.h  x-socket.h  x-spin.h  x-stdio.h  (+6 more)
src/libafb/tls/: tls-gnu.c  tls-gnu.h  tls-mbed.c  tls-mbed.h  tls.c  tls.h
src/libafb/utils/: expand-json.c  expand-json.h  expand-vars.c  expand-vars.h  globmatch.c  globmatch.h  globset.c  globset.h  json-locator.c  json-locator.h  jsonstr.c  jsonstr.h  locale-root.c  locale-root.h  lockany.c  lockany.h  namecmp.h  path-search.c  path-search.h  pearson.c  pearson.h  sha1.c  sha1.h  u16id.c  u16id.h  uuid.c  uuid.h  websock.c  websock.h  wrap-base64.c  wrap-base64.h  wrap-json.c  wrap-json.h  ws.c  ws.h
src/libafb/wsapi/: afb-proto-ws.c  afb-proto-ws.h  afb-stub-rpc.c  afb-stub-rpc.h  afb-stub-ws.c  afb-stub-ws.h  afb-wsapi.c  afb-wsapi.h
src/libafb/wsj1/: afb-ws-json1.c  afb-ws-json1.h  afb-wsj1.c  afb-wsj1.h
src/libafbcli/: CMakeLists.txt  afb-ws-client.c  afb-ws-client.h  export-libafbcli.map  libafbcli.pc.in  trfhdr
src/libafbwsc/: CMakeLists.txt  afb-ws-client.c  afb-ws-client.h  libafbwsc.pc.in
src/tests/: CMakeLists.txt  cynagoraTest.initial  globset.in  globset.out  test-afb-auth.c  test-afb-calls.c  test-afb-data.c  test-afb-evt.c  test-afb-jobs.c  test-afb-perm.c  test-afb-rpc-coder.c  test-afb-rpc-decoder.c  test-afb-rpc-spec.c  test-afb-rpc-v3.c  test-afb-type.c  test-afb-uri.c  test-api-common.c  test-api-so-v4.c  test-api-v3.c  test-api-v4.c  test-apiset.c  test-ev-mgr.c  test-expand-json.c  test-expand-vars.c  test-globset.c  test-json-locator.c  test-locale-root.sh  test-locale-root2.sh  test-path-search.c  test-req-common.c  test-req-v3.c  test-sched.c  test-session.c  test-sig-monitor.c  test-token.c  test-u16id.c  test-wrap-json.c  test-wsapi.c
src/tests/apiset/: CMakeLists.txt  test-apiset.c
src/tests/apiv3/: CMakeLists.txt  test-apiv3.c
src/tests/globset/: CMakeLists.txt
src/tests/session/: CMakeLists.txt
src/tests/test-bindings/: CMakeLists.txt  bug.c  hello.c
src/tests/u16id/: CMakeLists.txt  test-u16id.c
src/tests/wrap-json/: CMakeLists.txt
zephyr/: CMakeLists.txt  Kconfig  module.yml
(+3 files in other folders)
