if(CONFIG_AFB_BINDER)
    set(WITH_ZEPHYR 1)

    # almost sure
    set(WITH_AFB_CALL_SYNC 0)
    set(WITH_AFB_DEBUG 0)
    set(WITH_AFB_TRACE 0)
    set(WITH_API_CREATOR 0)
    set(WITH_CALL_PERSONALITY 0)
    set(WITH_CASE_FOLDING 0)
    set(WITH_CLOCK_GETTIME 0)
    set(WITH_DIRENT 0)
    set(WITH_DYNAMIC_BINDING 0)
    set(WITH_ENVIRONMENT 0)
    set(WITH_EPOLL 0)
    set(WITH_EVENTFD 0)
    set(WITH_EXTENSION 0)
    set(WITH_FDEV_EPOLL 0)
    set(WITH_FDEV_POLL 1)
    set(WITH_FDEV_SELECT 0)
    set(WITH_FDEV_SYSTEMD 0)
    set(WITH_FNMATCH 0)
    set(WITH_GNUTLS 0)
    set(WITH_L4VSOCK 0)
    set(WITH_LIBMAGIC 0)
    set(WITH_LIBMICROHTTPD 0)
    set(WITH_LIBUUID 0)
    set(WITH_LOCALE_FOLDER 0)
    set(WITH_LOCALE_SEARCH_NODE 0)
    set(WITH_OPENAT 0)
    set(WITHOUT_CYNAGORA 1)
    set(WITHOUT_JSON_C 1)
    set(WITHOUT_TESTS 1)
    set(WITH_RANDOM_R 0)
    set(WITH_REALPATH 0)
    set(WITH_RPC_V1 0)
    set(WITH_RPC_V3 1)
    set(WITH_RPUTILS_STATIC 1)
    set(WITH_SIG_MONITOR_DUMPSTACK 0)
    set(WITH_SIG_MONITOR_FOR_CALL 0)
    set(WITH_SIG_MONITOR_SIGNALS 0)
    set(WITH_SIG_MONITOR_TIMERS 0)
    set(WITH_SUPERVISION 0)
    set(WITH_SYSTEMD 0)
    set(WITH_SYS_UIO 0)
    set(WITH_TRACK_JOB_CALL 0)
    set(WITH_UNIX_SOCKET 0)
    set(WITH_WSCLIENT_URI_COPY 0)

    # tunable
    set(ARCH32 0)
    set(WITH_AFB_HOOK 0)
    set(WITH_CRED 0)
    set(WITH_REPLY_JOB 1)
    set(WITH_REQ_PROCESS_ASYNC 1)

    # unsure
    set(WITH_THREAD_LOCAL 1)

    #add_subdirectory(.. afb-libafb)
endif()